HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefUnsafeRequirement/Expected.uv
//! Expected diagnostic metadata for the RawDerefUnsafeRequirement rejected-source specimen.

expectedDiagnostic("", "rule.16.T-Deref-Raw")
